# FastRNRRLearning

./: .gitignore  Advancing FastRNRR Algorithm Performance.md  Advancing.md  CMakeLists.txt  Data_nu.md  Data_nu_GNC_逐行讲解.md  Features.md  README.md  RNRRShow.md  RNRR_Registration_Workflow_Example.md  \
paper/: FastNonRigid-arXiv.bbl  FastNonRigid-arXiv.tex  algorithm.tex  conclusion.tex  egbib.bib  introduction.tex  related.tex  results.tex  supp.tex
src/: NonRigidreg.cpp  NonRigidreg.h  Registration.cpp  Registration.h  main.cpp
src/tools/: OmpHelper.h  Types.h  io_mesh.h  nanoflann.h  nodeSampler.cpp  nodeSampler.h  tools.cpp  tools.h
